# zgw-00147

./: README.md  manual_test.py  pyproject.toml  test_encoding_and_collection.py  test_handoff_cli_chain.py  test_snapshot.py  test_snapshot_cli_chain.py
.review_inputs_a03/: manifest_force_bad_mixed.csv  manifest_force_good.csv
.review_inputs_codex_a01/: manifest_v1.csv  manifest_v2.csv
.review_runtime/: manifest_force_bad.csv  manifest_hash_mismatch.csv
.review_runtime_codex_a01_source/: reviewbatch_v1.json  reviewbatch_v2.json
.review_runtime_codex_a01_source_clean/: reviewbatch_v1.json
.review_runtime_codex_a01_target_clean/: export_v1.json  export_v2_after_ops.json
.review_runtime_codex_p09_a01/: args_playbook.json  csv_conflict_playbook.json  fallback_playbook.json  playbook_template_conflict.csv  recent_ops_playbook.json  reviewer_manifest.csv
.review_runtime_reviewer/: manifest_force_bad_mixed.csv
.review_runtime_reviewer_codex_a01_manual_dst/: reviewer_manifest.csv
.review_runtime_reviewer_codex_a01_manual_src/: playbook_export.json
evidence_cli/: __init__.py  __main__.py  cli.py  db.py  handoff.py  manifest.py  playbook.py  precheck.py  report.py  snapshot.py
evidence_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
manual_test_20260620030630/: export.json  manifest.csv  snapshot.json
report/: after_mixed_force.csv  batch001.csv  batch001.json  batch001_report.csv  batch001_report.json  before_replace.csv
sample_evidence/: manifest.csv  manifest_all_bad.csv  manifest_bad.csv  manifest_mixed.csv  transaction.csv
(+29 files in other folders)
