[project]
name = "evidence-cli"
version = "0.1.0"
description = "离线证据包移交 CLI 工具"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
]

[project.scripts]
evi = "evidence_cli.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["evidence_cli*"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
norecursedirs = [
    "evidence_cli",
    ".review_*",
    "manual_test*",
    "sample_evidence",
    "report",
    "evidence_cli.egg-info",
    ".git",
]
addopts = "-ra"
testpaths = ["."]
